<resources>
    <string name="app_name">Organizer</string>
    <string name="action_settings">Settings</string>
    <string name="title">Title</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>*
    <string name="save_as_encrypted">save as encrypted</string>
    <string name="encrypt_decrypt">Encrypt/Decrypt</string>
    <string name="channel_name">alarm notification channel</string>
    <string name="channel_description">channel for alarms</string>
    <string name="new_note">(new note)</string>
    <string name="confirm_delete_note">Are you sure to delete this note ?</string>
    <string name="yes">Yes</string>
    <string name="no_cancel">No/Cancel</string>
    <string name="please_specify_note_title">You must specify a title to your note</string>
    <string name="ok">OK</string>
    <string name="prompt_enter_password">enter password for encryption/decryption</string>
    <string name="error_during_decryption">An error occurred in decryption</string>
    <string name="enter_password">enter password for encryption/decryption</string>
    <string name="please_enter_password_for_encrypted_note">enter password for save as encrypted</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_node_title">enter node title</string>
    <string name="delete_node">Delete Node</string>
    <string name="cant_delete_root_node">can\'t delete root</string>
    <string name="add_tree">+ tree</string>
    <string name="get_items">get items</string>
    <string name="are_you_sure_to_delete_this_node">Are you sure to delete this node ?</string>
    <string name="goto_node">Goto Node</string>
    <string name="rebind_parent">Rebind Parent</string>
    <string name="set_parent_node">set parent node id for this node</string>
    <string name="todo_no_item_selected">no item selected</string>
    <string name="default_error_message">I can\'t do that</string>
    <string name="dismiss_keyboard">select any item then dismiss the keyboard</string>
</resources>
